--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,3 +63,36 @@ h2 {
     transition: all 0.2s;
   }
 }
+
+.linha {
+  height: 110px;
+  position: fixed;
+  right: 38px;
+  top: 30%;
+  z-index: 1000;
+  border-left: 5px solid white;
+}
+.dotted {
+  height: 50px;
+  position: fixed;
+  right: 38px;
+  top: 20%;
+  z-index: 1000;
+  border-left: 5px dotted white;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: none;
+  background: white;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.4);
+}
