--- a/src/css/assets/contato.css
+++ b/src/css/assets/contato.css
@@ -1,39 +1,27 @@
-/* Contato */
-
-#contato {
-  width: 100vw;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-.formulario {
-  display: flex;
-  justify-content: center;
-  margin-top: 50px;
-}
-
-.teste {
-  display: grid;
-  padding: 30px;
-}
-
 label {
   font-size: 20px;
   padding: 5px;
 }
 
+#contato {
+  margin-top: 35px;
+  padding: 15px;
+  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
 form input {
   font-family: "Segoe UI", sans-serif;
-  width: 400px;
-  height: 45px;
-  font-size: 20px;
-  border-radius: 4px;
-  padding: 20px;
+  max-width: 500px;
 }
 
 #mensagem {
   font-family: "Segoe UI", sans-serif;
-  padding: 20px;
+
+  width: 100%;
+  height: 300px;
   max-width: 800px;
   font-size: 20px;
   border-radius: 4px;
