--- a/src/css/assets/footer.css
+++ b/src/css/assets/footer.css
@@ -1,16 +1,11 @@
 footer {
   width: 100%;
-  height: 45vh;
   background-color: #3a3a3a;
   margin-top: 20px;
 }
 
 footer div h4 {
-  display: flex;
-  justify-content: center;
-  align-self: center;
-  align-items: center;
-  justify-self: center;
+  text-align: center;
   font-size: 60px;
   padding: 15px;
   margin-top: 5px;
