--- a/src/css/assets/projetos.css
+++ b/src/css/assets/projetos.css
@@ -1,34 +1,15 @@
-/* projetos */
-#projetos {
-  width: 100vw;
-  height: 100vh;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-.bloco-projetos {
-  padding: 20px;
-}
-
-.projetos-andamento h4 {
-  font-size: 30px;
-  font-weight: 500;
-  margin-bottom: 20px;
-}
-
-/* cards */
 .card {
-  max-width: 400px;
+  color: black;
+  text-align: center;
+  margin: 10px;
+  border: 1px solid white;
+  border-radius: 10px;
 }
 
-.card h4 {
-  font-size: 20px;
+.card img {
+  border-radius: 10px;
 }
 
-.imagem img:hover {
+.card:hover {
   transform: scale(1.1);
-}
-
-.concluidos {
-  padding: 20px;
 }
