--- a/src/css/assets/contato.css
+++ b/src/css/assets/contato.css
@@ -1,48 +1,56 @@
-label {
-  font-size: 20px;
-  padding: 5px;
-}
+/* Contato */
 
 #contato {
-  margin-top: 35px;
-  padding: 15px;
+  height: 100vh;
+}
+
+.container-email {
+  padding: 100px;
+  border: 1px solid white;
+  background-color: white;
+  color: black;
+}
+
+.container-social {
+  margin-top: 60px;
+  padding: 100px;
+  border: 1px solid white;
+}
+
+.redes {
   display: flex;
   justify-content: center;
-  align-self: center;
+  align-items: center;
 }
 
-form input {
-  font-family: "Segoe UI", sans-serif;
-  max-width: 500px;
-}
-
-#mensagem {
-  font-family: "Segoe UI", sans-serif;
-  width: 100%;
-  height: 300px;
-  max-width: 800px;
-  font-size: 20px;
-  border-radius: 4px;
-}
-
-.container-btn {
-  display: flex;
-  justify-content: flex-end;
-}
-
-#enviar {
-  width: 300px;
-  height: 40px;
-  background-color: transparent;
-  border: 3px solid white;
-  border-radius: 8px;
+.redes a {
+  text-decoration: none;
+  display: block;
+  padding: 15px;
   color: white;
-  cursor: pointer;
-  margin-top: 10px;
-  font-size: 20px;
 }
 
-#enviar:hover {
-  background-color: #3a3a3a;
-  transition: 0.3s all;
+.redes .fa-facebook-f:hover {
+  color: #4267b2;
+  transition: color 0.3s;
+}
+
+.redes .fa-whatsapp:hover {
+  color: #2ac44d;
+  transition: 0.3s;
+}
+
+.redes .fa-github:hover {
+  color: #c7bd2c;
+  transition: color 0.3s;
+}
+
+.redes .fa-instagram:hover {
+  color: #8134af;
+  transition: 0.3s;
+}
+
+.redes .fa-linkedin-in:hover {
+  color: #0a66c2;
+  transition: 0.3s;
 }
