--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,7 @@
 @import "./assets/menu-aside.css";
+@import "./assets/breakpoints.css";
+@import "./assets/menu.css";
+@import "./assets/sobre.css";
 @import "./assets/slide.css";
 @import "./assets/contato.css";
 @import "./assets/projetos.css";
@@ -54,123 +57,4 @@ hr {
 h2 {
   font-size: 80px;
   font-weight: 300;
-}
-
-/* Menu */
-nav div {
-  padding: 10px;
-}
-
-nav div a {
-  color: white;
-}
-
-nav div a:hover {
-  transform: scale(1.1);
-  transition: all 0.3s;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  color: white;
-}
-
-.logo {
-  margin-left: 20px;
-  margin-right: 50px;
-  color: white;
-  text-decoration: none;
-}
-
-.logo:hover {
-  color: darkgrey;
-  transform: scale(1.1);
-  transition: all 0.3s;
-}
-
-/* Sobre */
-
-#sobre {
-  padding: 10px;
-  margin-top: 3rem;
-  margin-bottom: 2rem;
-}
-
-.container-img {
-  margin-top: 3rem;
-  margin-bottom: 4rem;
-}
-
-.img {
-  border: 4px solid white;
-  border-radius: 50%;
-}
-
-.conteudo {
-  font-size: 20px;
-  font-weight: 300;
-}
-
-#maquina {
-  font-size: 60px;
-  font-weight: 400;
-  margin-bottom: 15px;
-}
-
-#maquina:after {
-  content: "|";
-  margin-left: 3px;
-  opacity: 1;
-  animation: pisca 0.7s infinite;
-}
-
-@keyframes pisca {
-  0% {
-    opacity: 0;
-    transition: all 0.2s;
-  }
-}
-
-/* Breakpoints */
-@media (min-width: 0px) and (max-width: 575.98px) {
-  .linha {
-    display: none;
-  }
-
-  .dotted {
-    display: none;
-  }
-
-  .menu-aside {
-    position: fixed;
-    right: 20px;
-    top: 45%;
-    z-index: 1000;
-  }
-}
-
-@media (min-width: 576px) {
-  .linha {
-    height: 110px;
-    position: fixed;
-    right: 38px;
-    top: 30%;
-    z-index: 1000;
-    border-left: 5px solid white;
-  }
-
-  .menu-aside {
-    position: fixed;
-    right: 20px;
-    top: 50%;
-    z-index: 1000;
-  }
-
-  .dotted {
-    height: 50px;
-    position: fixed;
-    right: 38px;
-    top: 20%;
-    z-index: 1000;
-    border-left: 5px dotted white;
-  }
 }
