--- a/src/css/assets/contato.css
+++ b/src/css/assets/contato.css
@@ -4,6 +4,16 @@
   height: 100vh;
 }
 
+#contato a{
+  color: white;
+  text-decoration: none;
+}
+
+#contato a:hover{
+  transform: scale(1.1);
+  transition: all 6ms;
+}
+
 .container-email {
   padding: 100px;
   border: 1px solid white;
