--- a/src/css/assets/contato.css
+++ b/src/css/assets/contato.css
@@ -4,12 +4,12 @@
   height: 100vh;
 }
 
-#contato a{
+#email{
   color: black;
   text-decoration: none;
 }
 
-#contato a:hover{
+#email:hover{
   transform: scale(1.1);
   transition: all 6ms;
 }
