--- a/src/css/assets/contato.css
+++ b/src/css/assets/contato.css
@@ -4,14 +4,14 @@
   height: 100vh;
 }
 
-#email{
-  color: black;
-  text-decoration: none;
-}
-
-#email:hover{
+#contato a:hover{
   transform: scale(1.1);
   transition: all 6ms;
+}
+
+.email{
+  color: black;
+  text-decoration: none;
 }
 
 .container-email {
