--- a/src/css/assets/contato.css
+++ b/src/css/assets/contato.css
@@ -14,6 +14,12 @@
   text-decoration: none;
 }
 
+.email:hover{
+
+  transform: scale(1.1);
+  transition: all 6ms;
+}
+
 .container-email {
   padding: 100px;
   border: 1px solid white;
